Added Model and ModelInstance and made Material.close and ModelInstance.close throw no Exception